Fix cumulative layout shifting

--- a/src/components/Pagination/styles.module.scss
+++ b/src/components/Pagination/styles.module.scss
@@ -7,6 +7,10 @@
     background-color: var(--gray);
     padding: 12px;
     margin: 4px;
+
+    &:hover {
+      background-color: var(--light-gray);
+    }
   }
   .active {
     background-color: var(--light-gray);
