--- a/src/layout/MainLayout/styles.module.scss
+++ b/src/layout/MainLayout/styles.module.scss
@@ -11,6 +11,7 @@
   main {
     padding: 32px;
     width: 100%;
+    min-height: 700px;
   }
 }
 
